fix: make update profile view visible on desktop

--- a/src/settings/update-profile-form/styles.module.scss
+++ b/src/settings/update-profile-form/styles.module.scss
@@ -23,3 +23,7 @@
 .between {
   justify-content: space-between;
 }
+
+.white {
+  background-color: #f6f1f4;
+}
